--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1170, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="google-site-verification" content="DTIhBcVCKf6yWAkQ9LfN63QRCxumF1pSOWwEFGQZmrI" />
     <title>fiita</title>
 </head>
 <body>
